# QAbot

./: QAbot.code-workspace  README.md
backend/: .env.example  .gitignore  .last_sync  README.md  main.py  pyproject.toml
backend/qabot/: __init__.py  bot.py  config.py  esa.py  gemma_provider.py  gemma_test.py  knowledge.py  vector_store.py
backend/ragbot/: __init__.py  bot.py  config.py  esa_client.py  llm_manager.py  sync_database.py  vector_store.py
frontend/: README.md
